--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+  "dev": "vite",
+  "build": "vite build",
++ "predeploy": "npm run build",
++ "deploy":    "gh‑pages -d docs"
+}
+
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
