--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
   "dev": "vite",
   "build": "vite build",
-+ "predeploy": "npm run build",
-+ "deploy":    "gh‑pages -d docs"
+  "predeploy": "npm run build",
+  "deploy":    "gh‑pages -d docs"
 }
 
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
