--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "workbox-strategies": "^7.0.0"
   },
   "devDependencies": {
+    "electron": "^24.0.0",
+    "electron-builder": "^23.6.0"
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
