--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "vite",
     "build": "vite build",
     "predeploy": "npm run build",
+    "electron:dev": "electron .",
+    "build:electron": "electron-builder"
     "deploy": "gh-pages -d docs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
