--- a/package.json
+++ b/package.json
@@ -14,6 +14,21 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "build": {
+    "appId": "com.pezz82.mister2ndscreen",
+    "files": [
+      "docs/**/*",
+      "main.js",
+      "preload.js",
+      "package.json"
+    ],
+    "directories": {
+      "output": "release"
+    },
+    "win": { "target": "nsis" },
+    "mac": { "target": "dmg" },
+    "linux": { "target": "AppImage" }
+  }
   "dependencies": {
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
