--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "vite build",
     "predeploy": "npm run build",
     "electron:dev": "electron .",
-    "build:electron": "electron-builder"
+    "build:electron": "electron-builder",
     "deploy": "gh-pages -d docs",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -28,7 +28,7 @@
     "win": { "target": "nsis" },
     "mac": { "target": "dmg" },
     "linux": { "target": "AppImage" }
-  }
+  },
   "dependencies": {
     "framer-motion": "^11.0.0",
     "react": "^18.2.0",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "electron": "^24.0.0",
-    "electron-builder": "^23.6.0"
+    "electron-builder": "^23.6.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
@@ -58,3 +58,13 @@
     "gh-pages": "^6.0.0"
   }
 }
+*/
+
+// ----------------------------
+// Usage:
+// 1. npm install --save-dev electron electron-builder
+// 2. npm run build           # outputs React build to docs/
+// 3. npm run electron:dev    # preview desktop app
+// 4. npm run build:electron  # package executables into release/
+// ----------------------------
+
